styles.css
@font-face {
    font-family: 'lazy_dog';
    src: url('lazy_dog.ttf') format('truetype');
}

body {
    margin: 0;
    height: 100vh;
    background: #01081e;
    opacity: 1;
    text-align: center;
    font-size: xx-large;
    font-family: 'lazy_dog', sans-serif;
}

h1 {
    color: #99bfdb;
    font-size: 2.5em;
    text-align: center;
}

h2 {
    color: #99bfdb;
    font-size: 1.5em;
    text-align: center;
}

h3 {
    color: #99bfdb;
    font-size: 1.5em;
    text-align: left;
    margin-bottom: -10px;
    margin-top: 2%;
}

.wrapper {
    display: flex;
    flex-direction: column;
    color: #99bfdb;
}

.ghost-wrapper{
    display: flex;
    justify-content: space-between;
}

.ghost-wrapper:hover {
    color: #84a6bd;
}

.evidence-wrapper {
    display: flex;
    justify-content: space-between;

}

.evidence-wrapper:hover {
    color: #6ca6d0;
}

.gcol1,
.gcol2,
.gcol3 {
    flex-basis: 30%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 5px;
}

.ecol1,
.ecol2,
.ecol3 {
    flex-basis: 30%;
    display: flex;
    flex-direction: column;
    align-items: center;
    margin-bottom: 5px;
}

.header {
    background: #01081e;
    color: #99bfdb;
    font-family: 'lazy_dog', sans-serif;
    text-align: center;
    box-sizing: border-box;
    height: 5%;
    margin: 2%;
}

.more-categories {
    font-family: 'lazy_dog', sans-serif;
    text-align: center; 
    flex-direction: column; 
    justify-content: space-around;
    height: 90%
}

.starting,
.maps,
.blink-speed,
.cursed-objects {
    width: 100%;
    color:#99bfdb;
    background: #01081e;
    box-sizing: border-box;
    flex: 1; 
    text-decoration: none;
    display: flex; 
    justify-content: center; 
    align-items: center; 
}

.starting a,
.maps a,
.blink-speed a,
.cursed-objects a {
    box-sizing: border-box;
    flex:1;
    display: block;
    width: 100%;
    height:100%;
    text-align: center; /* Center text */
    color:#99bfdb;
    background: #01081e;
}

.starting:hover a,
.maps:hover a,
.blink-speed:hover a,
.cursed-objects:hover a {
    color: #01081e;
    background: #99bfdb;
}

.starting:hover,
.maps:hover,
.blink-speed:hover,
.cursed-objects:hover {
    color: #01081e;
    background: #99bfdb;
}

